--- a/main.html
+++ b/main.html
@@ -5,7 +5,9 @@
 </head>
 
 <body>
-<p>Hi paul</p>
+  <p>Hi paul</p>
+  <p>This is the new unscience website created by Paul Ajuwon. Doesn't seem to be working right now</p>
+ 
 </body>
 
 </html>
